--- a/testbed/Gemfile
+++ b/testbed/Gemfile
@@ -7,7 +7,7 @@ plugin_root = File.expand_path('../..', __FILE__)
 eval(File.read File.join(plugin_root, 'Gemfile.rails_version'))
 gem 'surveyor', :path => plugin_root
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3', '= 1.3.6'
+gem 'sqlite3', '~> 1.3.0'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
