--- a/testbed/Gemfile
+++ b/testbed/Gemfile
@@ -7,13 +7,12 @@ plugin_root = File.expand_path('../..', __FILE__)
 eval(File.read File.join(plugin_root, 'Gemfile.rails_version'))
 gem 'surveyor', :path => plugin_root
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3', '~> 1.3.0'
+gem 'sqlite3'
 # Use SCSS for stylesheets
-gem 'sass-rails', '~> 5.0'
+# gem 'sass-rails'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
-gem 'coffee-rails', '~> 4.1.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
 
@@ -43,7 +42,7 @@ end
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> in views
-  gem 'web-console', '~> 2.0'
+  gem 'web-console'
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
