upgrade complete and all tests passing

--- a/testbed/Gemfile
+++ b/testbed/Gemfile
@@ -37,6 +37,7 @@ gem 'acts_as_list'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rails-controller-testing'
 end
 
 group :development do
